psd: mark read layer styles as valid

BUG: 441605